# rosconfrde25-workshop

./: README.md
active-simulate-plan-instructions/: active-simulate-plan-roscon-README.md
sit-aw-anchoring-resources/: .bashrc  Dockerfile  Makefile  entrypoint.sh
sit-aw-anchoring-resources/workspace/dt-simulator/: DT_Simulation.py  README.md  setup.json  update_json.py
sit-aw-anchoring-resources/workspace/src/anchoring_core/: CMakeLists.txt  package.xml
sit-aw-anchoring-resources/workspace/src/anchoring_core/include/anchoring_core/: anchoring_manager.hpp
sit-aw-anchoring-resources/workspace/src/anchoring_process/: CMakeLists.txt  README.md  package.xml
sit-aw-anchoring-resources/workspace/src/anchoring_process/src-gen/anchoring_process_def/: Pkg_anchoring_process_def.h  anchoring_process.cpp  anchoring_process.h  anchoring_process_main.cpp  anchoring_process_main.h
sit-aw-anchoring-resources/workspace/src/anchoring_process/src-gen/anchoring_process_def/globalenums/: Pkg_globalenums.h
sit-aw-anchoring-resources/workspace/src/anchoring_process/src/anchoring_process_def/: anchoring_process_impl.cpp  anchoring_process_impl.h  typedb_client.cpp  typedb_client.hpp
sit-aw-anchoring-resources/workspace/src/anchoring_process/src/anchoring_process_def/utils/: node_utils.hpp  parameters_utils.cpp
sit-aw-anchoring-resources/workspace/src/anchoring_process_interfaces/: CMakeLists.txt  package.xml
sit-aw-anchoring-resources/workspace/src/anchoring_process_interfaces/action/: PopulateInstances.action  SetOntology.action
sit-aw-anchoring-resources/workspace/src/examples/anchoring_cubesworld_plugin/: CMakeLists.txt  package.xml  plugins.xml
sit-aw-anchoring-resources/workspace/src/examples/anchoring_cubesworld_plugin/include/anchoring_cubesworld_plugin/: anchoring_cubesworld_plugin.hpp  visibility_control.h
sit-aw-anchoring-resources/workspace/src/examples/anchoring_cubesworld_plugin/rules/mapping/: rules_cube.json  rules_gripper.json  rules_pose.json
sit-aw-anchoring-resources/workspace/src/examples/anchoring_cubesworld_plugin/rules/schemas/: attributes_classes.tql  relations.tql  rules.tql
sit-aw-anchoring-resources/workspace/src/examples/anchoring_cubesworld_plugin/src/: anchoring_cubesworld_plugin.cpp
sit-aw-anchoring-resources/workspace/src/examples/pick_place_uc/: CMakeLists.txt  package.xml
sit-aw-anchoring-resources/workspace/src/examples/pick_place_uc/launch/: pick_place_uc_launch.py
sit-aw-anchoring-resources/workspace/src/examples/pick_place_uc/launch/cfg/: params.yaml
sit-aw-anchoring-resources/workspace/src/process_msgs/: package.xml
sit-aw-anchoring-resources/workspace/tql/instances/: Agent.tql  Cube.tql  DigitalTwin.tql  Pose.tql
sit-aw-anchoring-resources/workspace/tql/relations/: has_grasp_pose.tql  has_id.tql  is_graspable_by.tql  is_reachable_by.tql  on_top_of.tql
