<?xml version="1.0"?>
<package format="3">
	<name>anchoring_process</name>
	<version>0.0.1</version>
  <description>TBD</description>
  <maintainer email="matteo.morelli@cea.fr">Matteo MORELLI</maintainer>
  <license>Apache-2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>nlohmann_json</depend>
	<depend>rclcpp</depend>
	<depend>rclcpp_lifecycle</depend>
	<depend>rclcpp_action</depend>
	<depend>anchoring_process_interfaces</depend>
	<depend>anchoring_core</depend>
	<depend>pluginlib</depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
