<?xml version="1.0"?>
<package format="3">
	<name>process_msgs</name>
	<version>0.1.0</version>
	<description>Messages interfaces for higher level functionalities in the semantic anchoring stack.</description>
  <author email="raphael.lallement@cea.fr">Raphaël LALLEMENT</author>
  <author email="matteo.morelli@cea.fr">Matteo MORELLI</author>
  <maintainer email="matteo.morelli@cea.fr">Matteo MORELLI</maintainer>
	<license>CeCILL-B</license>

	<buildtool_depend>rosidl_default_generators</buildtool_depend>


	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
	<build_type>ament_cmake</build_type>
	</export>
</package>
