<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>anchoring_cubesworld_plugin</name>
  <version>0.1.0</version>
  <description>Schemas, DT-mapping rules and anchoring entity managers for the cubes world domain</description>
  <author email="Yechao.SUN@cea.fr">Yechao SUN</author>
  <author email="raphael.lallement@cea.fr">Raphaël LALLEMENT</author>
  <author email="matteo.morelli@cea.fr">Matteo MORELLI</author>
  <maintainer email="matteo.morelli@cea.fr">Matteo MORELLI</maintainer>
  <license>CeCILL-B</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>rclcpp</build_depend>
	<build_depend>rclcpp_lifecycle</build_depend>
  <depend>ament_index_cpp</depend>
  <depend>nlohmann_json</depend>
  <depend>anchoring_core</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
