<?xml version="1.0"?>
<package format="3">
	<name>pick_place_uc</name>
	<version>0.0.1</version>
  <description>TBD</description>
  <maintainer email="matteo.morelli@cea.fr">Matteo MORELLI</maintainer>
  <license>Apache-2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>
	<depend>rclcpp_lifecycle</depend>
	<depend>anchoring_process</depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
